Fix alignment for masthead

--- a/app/styles/scss/_masthead.scss
+++ b/app/styles/scss/_masthead.scss
@@ -30,7 +30,7 @@
     }
     /* Masthead branding and logo */
     .masthead-header {padding-bottom: 5px}
-        .masthead-header .brand {padding: 10px 10px 0 10px}
+        .masthead-header .brand {padding: 10px 10px 0 0}
         .masthead-branding-logo {
             min-height: 50px;
             padding: 10px 0 5px;
